Some Features DF

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -117,16 +117,22 @@
     "\n",
     "        \n",
     "def compute_graph_metrics(g, un_dir_g):\n",
+    "    print \"Graph Centrality measures!\"\n",
     "    in_d = nx.centrality.in_degree_centrality(g)\n",
     "    out_d = nx.centrality.out_degree_centrality(g)\n",
     "\n",
+    "    print \"Graph PageRank!\"\n",
     "    pagerank = nx.pagerank(g)\n",
     "\n",
+    "    print \"Graph Closeness & Betweenness!\"\n",
     "    closeness = nx.centrality.in_degree_centrality(g)\n",
     "    betweenness = nx.centrality.out_degree_centrality(g)\n",
     "\n",
+    "    print \"Graph Connected Comps!\"\n",
     "    cc = list(nx.connected_components(un_dir_g))\n",
+    "    print \"Graph Strongly Connected Comps!\"\n",
     "    scc = list(nx.strongly_connected_components(g))\n",
+    "    print \"Graph Weakly Connected Comps!\"\n",
     "    wcc = list(nx.weakly_connected_components(g))\n",
     "    return in_d, out_d, pagerank, closeness, betweenness, cc, wcc, scc\n",
     "\n",
@@ -187,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -215,30 +221,33 @@
     "                    convert_to_bin_trans, svd_k, nmf_n, unq_senders, unq_receivers, \n",
     "                    g, un_dir_g, in_d, out_d, pagerank, closeness, betweenness, cc, wcc, scc):\n",
     "    # Training Txns\n",
+    "    print \"Training Txns selection!\"\n",
     "    train_txns, pairs = get_random_traindf(dftrain, unq_senders, unq_receivers)\n",
-    "    print \"Training Txns selection Done!\"\n",
     "    # Test Txn pairs\n",
     "    test_pairs = zip(dftest['sender'].tolist(), dftest['receiver'].tolist())\n",
     "    \n",
     "    # Common computations for both train & test data\n",
     "    # Perform SVD on train_csr.\n",
+    "    print \"SVD!\"\n",
     "    U, sigma, VT = svds(train_csr, k=svd_k, tol=1e-10, which = 'LM')\n",
-    "    print \"SVD Done!\"\n",
     "    # Perform NMF on train_csr.\n",
+    "    print \"NMF!\"\n",
     "    W, H = gen_nmf(train_csr, nmf_n)\n",
-    "    print \"NMF Done!\"\n",
     "    \n",
     "    # Add Train Features\n",
+    "    print \"Adding Train Features\"\n",
     "    add_lin_alg_features(train_txns, U, sigma, VT, W, H)\n",
     "    add_centrality_features(train_txns, in_d, out_d, closeness, betweenness, pagerank)\n",
     "    add_pair_features(train_txns, pairs, un_dir_g, cc, scc, wcc)\n",
     "    \n",
     "    # Add Test Features\n",
+    "    print \"Adding Test Features\"\n",
     "    add_lin_alg_features(dftest, U, sigma, VT, W, H)\n",
     "    add_centrality_features(dftest, in_d, out_d, closeness, betweenness, pagerank)\n",
     "    add_pair_features(dftest, test_pairs, un_dir_g, cc, scc, wcc)\n",
     "    \n",
     "    # Save Data frames\n",
+    "    print \"Saving DFs\"\n",
     "    filename_postfix = '_bin{}_svd{}_nmf{}_snd{}_rcv{}.csv'.format(str(convert_to_bin_trans), str(svd_k), str(nmf_n), str(unq_senders), str(unq_receivers))\n",
     "    train_txns.to_csv('features/train' + filename_postfix)\n",
     "    dftest.to_csv('features/test' + filename_postfix)\n",
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -285,22 +294,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVD Done!\n",
-      "NMF Done!\n",
       "G represent Done!\n",
-      "Graph calcs Done!\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "global name 'scc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-474fe52e3d8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgen_traindf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgen_testdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgen_feature_dfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdftrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdftest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_csr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert_to_bin_trans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msvd_k\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnmf_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munq_senders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munq_receivers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-ab38ec248a9b>\u001b[0m in \u001b[0;36mgen_feature_dfs\u001b[0;34m(dftrain, dftest, train_csr, convert_to_bin_trans, svd_k, nmf_n, unq_senders, unq_receivers)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0madd_lin_alg_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_txns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0madd_centrality_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_txns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcloseness\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbetweenness\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpagerank\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0madd_pair_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_txns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpairs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mun_dir_g\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwcc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;31m# Add Test Features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: global name 'scc' is not defined"
+      "Graph calcs Done!\n",
+      "Training Txns selection Done!\n",
+      "SVD Done!\n",
+      "NMF Done!\n"
      ]
     }
    ],
@@ -313,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -333,24 +331,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26430, 20) (10000, 20)\n"
+     ]
+    }
+   ],
    "source": [
-    "train_txns.shape"
+    "print gen_traindf.shape, gen_testdf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26430, 20) (10000, 20)\n"
+     ]
+    }
+   ],
    "source": [
-    "ftrain.shape"
+    "print fl_traindf.shape, fl_testdf.shape "
    ]
   },
   {
